# HFPx3D

./: .gitignore  CMakeLists.txt  Elast_Ker_Int.cpp  Elast_Ker_Int.h  Ele_Base.cpp  Ele_Base.h  H_Potential.cpp  H_Potential.h  ICFns.cpp  ICFns.h  LICENSE.TXT  Local_IM.cpp  Local_IM.h  Local_IM_B.cpp  Local_IM_S.cpp  Matrix_Asm.cpp  Matrix_Asm.h  README.md  RectangularElementP0.cpp  RectangularElementP0.h  SijH.cpp  SijH.h  SijK.h  Submatrix.cpp  Submatrix.h  Tensor_Oper.cpp  Tensor_Oper.h  config.toml  elast_ker_int.cpp  elast_ker_int.h  elasticity_kernel_integration.cpp  elasticity_kernel_integration.h  ele_base.cpp  ele_base.h  element_utilities.cpp  element_utilities.h  h_potential.cpp  h_potential.h  main.cpp  matrix_asm.cpp  (+12 more)
Mesh_Files/: Elems_elliptical_124_el_32.npy  Elems_elliptical_440_el_32.npy  Elems_elliptical_550_el_32.npy  Elems_pennymesh1025el_32.npy  Elems_pennymesh1025el_64.npy  Elems_pennymesh121el_32.npy  Elems_pennymesh121el_64.npy  Elems_pennymesh24el_32.npy  Elems_pennymesh24el_64.npy  Nodes_elliptical_124_el_32.npy  Nodes_elliptical_440_el_32.npy  Nodes_elliptical_550_el_32.npy  Nodes_pennymesh1025el_64.npy  Nodes_pennymesh24el_64.npy  Save_m_as_npy.py  elliptical_124_el.mat  elliptical_440_el.mat  elliptical_550_el.mat  pennymesh1025el.mat  pennymesh121el.mat  pennymesh24el.mat
Test_Output/: test_assembly_24_ele.csv  test_solution_121_ele.csv  test_solution_24_ele.csv  test_solution_elc_124_ele.csv  test_solution_elc_440ele.csv  test_solution_elc_550_ele.csv  test_solution_psc_1025_ele.csv  test_solution_psc_121_ele.csv  test_solution_psc_24_ele.csv  test_stresses_elc_124_ele.csv  test_stresses_elc_440ele.csv  test_stresses_elc_550_ele.csv  test_stresses_psc_1025_ele.csv  test_stresses_psc_121_ele.csv  test_stresses_psc_24_ele.csv
il/: Toml.h  format.h  math.h
il/container/string/: StringView.h  unicode.h
il/core/: Error.h  base.h
il/io/: numpy.cpp  numpy.h  toml.cpp  toml.h
il/linear_algebra/dense/factorization/: LU.h
il/pretty_print/gdb/: printers.py
src/: c_f_iteration.cpp  c_f_iteration.h  cohesion_friction.h  constants.h  elasticity_kernel_integration.cpp  elasticity_kernel_integration.h  element_utilities.cpp  element_utilities.h  h_potential.cpp  h_potential.h  mesh_file_io.cpp  mesh_file_io.h  mesh_utilities.cpp  mesh_utilities.h  model_utilities.h  surface_mesh_utilities.cpp  surface_mesh_utilities.h  system_assembly.cpp  system_assembly.h  tensor_utilities.cpp  tensor_utilities.h
src/Core/: constants.h  model_parameters.h  model_utilities.h  surface_mesh_utilities.cpp  surface_mesh_utilities.h  tensor_utilities.cpp  tensor_utilities.h
src/Core/_test/: SF_test.cpp  dof_handle_test.cpp  element_shape_functions_test.cpp
src/Development/: c_f_iteration.cpp  c_f_iteration.h  cohesion_friction.cpp  cohesion_friction.h
src/Elasticity/: elasticity_kernel_integration.cpp  elasticity_kernel_integration.h  h_potential.cpp  h_potential.h
src/Elasticity/_test/: integration_test.cpp  integration_test_triangle_pt1.csv  integration_test_triangle_pt2.csv  integration_test_triangle_pt3.csv  kernel_integration_test.cpp
src/IO/: config_file_io.cpp  config_file_io.h  data_file_io.cpp  data_file_io.h  mesh_file_io.cpp  mesh_file_io.h
src/Solvers/: system_assembly.cpp  system_assembly.h  test_radial_crack_static.cpp  test_radial_crack_static.h
src/Solvers/_test/: Nodes_pennymesh121el_32.npy  assembly_test.cpp  assembly_test_bitriangle.csv  assembly_test_radial_crack_24el.csv  assembly_test_triangle.csv  matrix_assembly_test.cpp  solver_test.cpp
